// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshot should match snapshot 1`] = `
<Avatar
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="Cisco Webex"
  >
    <span>
      CW
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with failureBadge 1`] = `
<Avatar
  failureBadge={true}
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="Cisco Webex"
  >
    <span>
      CW
    </span>
    <div
      className="md-avatar-presence-icon-wrapper"
      data-shape={true}
    >
      <Icon
        fillColor="var(--avatar-presence-icon-dnd)"
        name="warning"
        scale={14}
        strokeColor="none"
        weight="filled"
      >
        <div
          className="md-icon-wrapper"
        >
          <svg
            className=""
            data-autoscale={false}
            data-scale={14}
            data-test="warning"
            height="100%"
            style={
              Object {
                "fill": "var(--avatar-presence-icon-dnd)",
                "stroke": "none",
              }
            }
            viewBox="0, 0, 32, 32"
            width="100%"
          />
        </div>
      </Icon>
    </div>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with hideDefaultTooltip 1`] = `
<Avatar
  hideDefaultTooltip={true}
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title=""
  >
    <span>
      CW
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with icon 1`] = `
<Avatar
  icon="check"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <Icon
      className="md-avatar-icon-wrapper"
      name="check"
      scale={16}
      weight="bold"
    >
      <div
        className="md-icon-wrapper md-avatar-icon-wrapper"
      >
        <svg
          className=""
          data-autoscale={false}
          data-scale={16}
          data-test="check"
          fill="currentColor"
          height="100%"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with initials 1`] = `
<Avatar
  initials="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <span>
      CW
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with isTyping 1`] = `
<Avatar
  isTyping={true}
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="Cisco Webex"
  >
    <span
      className="md-avatar-animation-wrapper"
    >
      <div
        style={
          Object {
            "transform": "scale(0.4)",
          }
        }
      >
        <Loading
          small={false}
        >
          <div
            className="md-loading"
          >
            <span
              className="md-loading__icon"
            />
            <span
              className="md-loading__icon"
            />
            <span
              className="md-loading__icon"
            />
          </div>
        </Loading>
      </div>
    </span>
    <span>
      CW
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with onPress 1`] = `
<Avatar
  onPress={[Function]}
  title="Cisco Webex"
>
  <ButtonSimple
    aria-label="Cisco Webex"
    className="md-avatar-button-wrapper"
    onPress={[Function]}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          aria-label="Cisco Webex"
          className="md-avatar-button-wrapper md-button-simple-wrapper"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div
            className="md-avatar-wrapper"
            data-color="default"
            data-size={24}
            title="Cisco Webex"
          >
            <span>
              CW
            </span>
          </div>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with presence 1`] = `
<div>
  <Avatar
    key="0"
    presence="default"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
    </div>
  </Avatar>
  <Avatar
    key="1"
    presence="active"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={true}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-active)"
          name="unread"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="unread"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-active)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="2"
    presence="meet"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={false}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-meeting)"
          name="camera-presence"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="camera-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-meeting)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="3"
    presence="schedule"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={false}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-schedule)"
          name="meetings-presence"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="meetings-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-schedule)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="4"
    presence="call"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={false}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-call)"
          name="handset"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="handset"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-call)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="5"
    presence="DND"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={true}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-dnd)"
          name="dnd-presence"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="dnd-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-dnd)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="6"
    presence="presenting"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={false}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-presenting)"
          name="share-screen"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="share-screen"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-presenting)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="7"
    presence="quietHours"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={true}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-quiet-hours)"
          name="quiet-hours-presence"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="quiet-hours-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-quiet-hours)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="8"
    presence="away"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={true}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-away)"
          name="recents-presence"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="recents-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-away)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="9"
    presence="OOO"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={true}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-ooo)"
          name="pto-presence"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="pto-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-ooo)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="10"
    presence="busy"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={true}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-busy)"
          name="busy-presence"
          scale={14}
          strokeColor="none"
          weight="bold"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="busy-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-busy)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="11"
    presence="onMobile"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={false}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-on-mobile)"
          name="phone"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="phone"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-on-mobile)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="12"
    presence="onDevice"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={false}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-on-device)"
          name="generic-device-video"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="generic-device-video"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-on-device)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="13"
    presence="onHold"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
      title="Cisco Webex"
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
        data-shape={false}
      >
        <Icon
          fillColor="var(--avatar-presence-icon-on-hold)"
          name="pause"
          scale={14}
          strokeColor="none"
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={14}
              data-test="pause"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-on-hold)",
                  "stroke": "none",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
</div>
`;

exports[`Avatar snapshot should match snapshot with size 1`] = `
<Avatar
  size={124}
  title="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={124}
    title="CW"
  >
    <span>
      C
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with src & alt 1`] = `
<Avatar
  alt="alt"
  src="src"
  title="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="CW"
  >
    <span>
      C
    </span>
    <img
      alt="alt"
      className="md-avatar-image-hidden"
      onError={[Function]}
      onLoad={[Function]}
      src="src"
    />
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with type 1`] = `
<Avatar
  title="Cisco Webex"
  type="space"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
    title="Cisco Webex"
  >
    <span>
      C
    </span>
  </div>
</Avatar>
`;
